Release Version 0.4.0